--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -2,10 +2,12 @@
 ---
 
 /* prettier-ignore */
+/*
 @use 'main
 {%- if jekyll.environment == 'production' -%}
   .bundle
 {%- endif -%}
-';
+';*/
+@use 'main' as *;
 
 /* append your custom style below */
